# Generative_Deep_Learning_2nd_Edition

./: .gitignore  pyproject.toml  requirements.txt
02_deeplearning/01_mlp/: mlp.ipynb
notebooks/: utils.py
notebooks/02_deeplearning/01_mlp/: mlp.ipynb
notebooks/02_deeplearning/02_cnn/: cnn.ipynb
notebooks/03_vae/01_autoencoder/: autoencoder.ipynb
notebooks/03_vae/02_vae_fashion/: vae_fashion.ipynb
notebooks/04_gan/01_dcgan/: dcgan.ipynb
scripts/: download.sh
scripts/downloaders/: download_kaggle_data.sh
